  (#0000686), both reported by katsklaw
- Added better error messages support instead of just "Dead socket".
- Ahem... Fix for patch above (memleak).
- Fixed bug which made opers unable to do -a/-q (#0000654).
- Fixed bug in +q/+a list (/mode #chan q)
- Added set::snomask-on-connect
- Some tiny text fixes
- Fast badword replace is now enabled by default
- Added (optional) class::recvq so you can dynamically/per class set the recvq (flood control).
  CLIENT_FLOOD in config.h is used as a default value if recvq is not specified.
- Bugfix for crash with STRIPBADWORDS_CHAN_ALWAYS.
- Fixed bug in ipv6 + unknown connection flood.
- Don't encrypt SSL certificate by default @ win32.
- Fixed /topic for opers when not in +s-channel.
- Improved unreal32docs.html readability/layout/text.
- Minor doc updates (example.conf).
- Added better (specific) link error messages (only on the "incomming" side) so you can easily
  see whether servername, hostname/ip or username is wrong.
- Added recvq column to /stats y reply.
- Fixed a throttling bug reported by Ely (#0000704)
- Fixed a resolver bug where cache entries didn't timeout correctly.
- Made async resolve-and-connect work
- Added link::options::nodnscache which means Unreal will not cache the host forever for
  outgoing server connections, you could for example enable this if you are linking two servers
  with an often changing host (like dyndns.org).
- Documentation updates for nodnscache.
- Fixed minor memleak with zip links.
- Code cleanup in m_umode
- Fixed bug in ISON
- Code cleanup
- Fixed a bug in m_part
- Fixed a bug where compiling with ZIP_LINKS and SSL wouldn't work (#0000707) reported by 
  Ravage.
- Added the ability to enable ziplinks via ./Config as well as specify a directory zlib is
  in. Also added the ability to specify a directory for OpenSSL.
- ZIP_LINKS fixes/debugging.
- Code (comments) cleanup
- Fixed an ident bug, maybe it actually works now.. (#0000709) reported by marviiin.